@@ -417,6 +417,11 @@ thread_start_func_2(rb_thread_t *th, VALUE *stack_start, VALUE *register_stack_s
     rb_thread_t *join_th;
     rb_thread_t *main_th;
     VALUE errinfo = Qnil;
+# ifdef USE_SIGALTSTACK
+    void rb_register_sigaltstack(rb_thread_t *th);
+
+    rb_register_sigaltstack(th);
+# endif
 
     ruby_thread_set_native(th);
 
